--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
         <li class="cabeçalho-lista-item">Estudante</li>
     </ul>
     </header>
-    
+    <section class="escola">
+        <div class="escola-div-conteudo">
+            <h2 class="escola titulo"> Tradicional estabelecimento de ensino, construído em 1927, na administração do presidente do Estado, Caetano Munhoz da Rocha. É um importante marco da paisagem urbana da cidade de Ponta Grossa. Com este tombamento buscou-se perpetuar um dos monumentos mais representativos da história da culta gente pontagrossense. Situado numa das principais praças da cidade, impõe-se no conjunto pela sobriedade e imponência da sua arquitetura.</h2>
+            <p class="escola-texto-um"></p>
+            <p class="escola-texto-dois"></p>
+        </div>
+        <img class="escola-imagem" src="/tmp/guest-dg3hvo/Imagens/Captura de tela_2023-06-12_07-38-21.png" alt="imagem-regente2">
+    </section>
     
 </body>
 </html>
